 * Added pagination to "choose destination" view when moving pages (Nick Smith, Žan Anderle)
 * Added ability to annotate search results with score (Karl Hobley)
 * Added ability to limit access to form submissions (Mikalai Radchuk)
 * Added the ability to configure the number of days search logs are kept for (Stephen Rice)
 * Fix: Migrations for wagtailcore and project template are now reversible (Benjamin Bach)
 * Fix: Migrations no longer depend on wagtailcore and taggit's `__latest__` migration, logically preventing those apps from receiving new migrations (Matt Westcott)
 * Fix: The default image format label text ('Full width', 'Left-aligned', 'Right-aligned') is now localised (Mikalai Radchuk)
 * Fix: Text on the front-end 'password required' form is now marked for translation (Janneke Janssen)
 * Fix: Text on the page view restriction form is now marked for translation (Luiz Boaretto)
 * Fix: Fixed toggle behaviour of userbar on mobile (Robert Rollins)
 * Fix: Image rendition / document file deletion now happens on a post_delete signal, so that files are not lost if the deletion does not proceed (Janneke Janssen)
 * Fix: "Your recent edits" list on dashboard no longer leaves out pages that another user has subsequently edited (Michael Cordover, Kees Hink, João Luiz Lorencetti)
 * Fix: `InlinePanel` now accepts a `classname` parameter as per the documentation (emg36, Matt Westcott)
 * Fix: Disabled use of escape key to revert content of rich text fields, which could cause accidental data loss (Matt Westcott)
 * Fix: Setting `USE_THOUSAND_SEPARATOR = True` no longer breaks the rendering of numbers in JS code for InlinePanel (Mattias Loverot, Matt Westcott)


1.6.3 (30.09.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Restore compatibility with django-debug-toolbar 1.5 (Matt Westcott)
 * Fix: Edits to StreamFields are no longer ignored in page edits on Django >=1.10.1 when a default value exists (Matt Westcott)


1.6.2 (02.09.2016)
~~~~~~~~~~~~~~~~~~
